<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_launcher_foreground"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_productos"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/menu_productos" />
        <item
            android:id="@+id/nav_servicios"
            android:icon="@drawable/btn_star_on"
            android:title="@string/menu_servicios" />
        <item
            android:id="@+id/nav_sucursales"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/menu_contactos" />
    </group>
</menu>